src/test/deca/context/valid/method.deca
class A {
    protected int x ;
    void setX(int x) {
        this.x = x ;
    }
    int getX() {
    return x;
    }
}

{
A.setX(1);
println(A.getX());
}
