src/test/deca/context/invalid/invalid_method_call.deca
// Argument attendu

//Date: 20.01.2022

class A{

    int entier;


    void setE(int e){
        this.entier = e;
    }

    void action(){
        this.entier = this.entier+1;
    }
}

{
A a = new A();
a.setE();
a.action();
println("ben non");
}
